# Patient-Digital-Twin-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.html
data/processed/: eda_summary_statistics.csv  patient_state_clean.csv
docs/assessment5/: ASSESSMENT_5_DOCUMENTATION.md  ASSESSMENT_5_FINAL_PDF.md  ASSESSMENT_5_MERGED_REPORT.md  DEMO_CHECKLIST.md  DEMO_VIDEO_SCRIPT.md  POSTER_OUTLINE_A1.md  TEST_REPORT.md  VALIDATION_REPORT.md  test.ipynb
frontend/: .env.example
frontend/src/: App.css  App.jsx
notebooks/: 01_data_loading.ipynb  02_model_comparison.ipynb  03_project_pipeline_overview.ipynb  04_gradient_boosting_comparision.ipynb  05_train_and_export_logreg.ipynb  06_inference_and_api_smoke_test.ipynb  07_threshold_analysis.ipynb  TunningParameter.ipynb  Untitled.ipynb  Untitled1.ipynb
scripts/: build_dataset.py  predict.py  train.py
src/healthcare_digital_twin/: __init__.py  api.py  constants.py  data.py  inference.py  insights.py  modeling.py  paths.py  schemas.py
tests/: test_api_endpoints.py  test_smoke.py
