[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-digital-twin"
version = "0.1.0"
description = "AI-powered Digital Twin for Metabolic Risk Prediction (NHANES 2017-2018)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mayank Dash" }]

dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
